--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                 < h3  class =" estudante-nome " > Mikael </ h3 >
             </div> _ _
             < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" Eduardo " alt =" foto de Eduardo " >
+                < img  class =" estudante-imagem " src =" Eduardo.png " alt =" foto de Eduardo " >
                 < h3  class =" estudante-nome " > Eduardo </ h3 >
             </div> _ _
             < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" Jhuan.jpg " alt =" foto de Jhuan " >
+                < img  class =" estudante-imagem " src =" Jhuan.png " alt =" foto de Jhuan " >
                 < h3  class =" estudante-nome " > Jhuan </ h3 >
             </div> _ _
             < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" José.jpg " alt =" foto de José " >
+                < img  class =" estudante-imagem " src =" José.png " alt =" foto de José " >
                 < h3  class =" estudante-nome " > José </ h3 >
             </div> _ _
 
