--- a/index.html
+++ b/index.html
@@ -4,65 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
+        <img src="hellbotica2.gif"
         <ul class="cabecalho-lista">
             <li class="cabecalho-estudante">Escola</li>
-            <li class="cabecalho-lista-item">HellBótica</li>
             <li class="cabecalho-estudante">Estudante</li>
+            <li class="cabecalho-estudante">Perfil</li>
             
         </ul>
     </header>
 
 </body>
-< header  class =" cabecalho " >
-        < img  class =" cabecalho-imagem " src =" sobre nos perfil.png " alt =" sobre nós perfil start " >
-        < ul  class =" cabecalho-lista " >
-            < li  class =" cabecalho-lista-item " > < a  href =" #escola " > Escola </ a > </ li >
-            < li  class =" cabecalho-lista-item " > < a  href =" #estudante " > Estudante </ a > </ li >
-        </ul>
-</ cabeçalho >
-    < id da seção  =" escola " >
-        < div  class =" escola-div-conteudo " >
-            < h2  class =" escola-titulo " > Sobre nos perfil </ h2 >
-            < p  class =" escola-texto-um " > descrição </p> _ _
-            < p  class =" escola-texto-dois " >nosso grupo foi criado com a intuição de desenvolvermos uma nova geração com uma visão mais ampla do futuro</p>
-  </div></p> _ _
-        </div> _ _
-        < img  class =" escola-imagem " src =" sobre nos perfil.png " alt =" imagem de robô mechendo numa tela " >
-    </ seção >
-    < id da seção  =" estudante " >
-        < h2  class =" estudante-titulo " > Quem nos somos </h2> _ _
-        < div  class =" estudante-todos " >
-            <span> </span> _ _ _ _
-            < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" mikael.png " alt =" foto de mikael " >
-                < h3  class =" estudante-nome " > Mikael </ h3 >
-
-            </div> _ _
-            < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" Eduardo.png " alt =" foto de Eduardo " >
-                < h3  class =" estudante-nome " > Eduardo </ h3 >
-
-            </div> _ _
-            < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" Jhuan.png " alt =" foto de Jhuan " >
-                < h3  class =" estudante-nome " > Jhuan </ h3 >
-
-            </div> _ _
-            < div  class =" estudante-div " >
-                < img  class =" estudante-imagem " src =" José.png " alt =" foto de José " >
-                < h3  class =" estudante-nome " > José </ h3 >
-            </div> _ _
-
-        </div> _ _
-    </ seção >
-    
-    < classe de rodapé  =" rodape " >
-        < img  class =" HellBótica " src =" sobre nos perfil.png " alt =" sobre nos perfil start " >
-    </ rodapé >
-</ corpo >
-
-</html> _ _
