--- a/index.html
+++ b/index.html
@@ -1,20 +1,62 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Equipe Alura Start</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img src="hellbotica2.gif"
+        <img class="cabecalho-imagem" src="hellbotica2.gif" alt="hellbotica2">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-estudante">Escola</li>
-            <li class="cabecalho-estudante">Estudante</li>
-            <li class="cabecalho-estudante">Perfil</li>
-            
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre nosso grupo</h2>
+            <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro.
+                .</p>
+            <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino,etc.</p>
+        </div>
+        <img class="escola-imagem" src="Meu projeto.png" alt="Imagem para representar o robo da hellbotica">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Criadores do Projeto HellBótica</h2>
+        <div class="estudante-todos">
+            <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="eduardo.jpg" alt="foto do eduardin">
+            <h3 class="estudante-nome">Eduardo</h3>
+            <a href="https://github.com/kakarotogoku"><img class="estudante-icone" src="github.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/eduardin0xx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="eduardo.jpg" alt="foto do Jhuan">
+            <h3 class="estudante-nome">Jhuan</h3>
+            <a href="https://github.com/Jhuan1"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.instagram.com/jhuan_victor19/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="mikael.jpeg" alt="foto do Mikael">
+            <h3 class="estudante-nome">Mikael</h3>
+            <a href="https://github.com/ShaolinZy"><img class="estudante-icone" src="github.png" alt=></a>
+            <a href="https://www.instagram.com/mikael_eduardo19/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="mikael.jpeg" alt="foto do José">
+            <h3 class="estudante-nome">José</h3>
+            <a href="https://github.com/JoseAugustosantosleal"><img class="estudante-icone" src="github.png" alt=></a>
+            <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+       
+    </div>
+    </section>
 </body>
+</html>
