--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="https://www.instagram.com/mikael_eduardo19/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="mikael.jpeg" alt="foto do José">
+            <img class="estudante-imagem" src="jose.jpg" alt="foto do José">
             <h3 class="estudante-nome">José</h3>
             <a href="https://github.com/JoseAugustosantosleal"><img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
