--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://www.instagram.com/eduardin0xx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="eduardo.jpg" alt="foto do Jhuan">
+            <img class="estudante-imagem" src="jhuan.jpg" alt="foto do Jhuan">
             <h3 class="estudante-nome">Jhuan</h3>
             <a href="https://github.com/Jhuan1"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.instagram.com/jhuan_victor19/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
