--- a/index.html
+++ b/index.html
@@ -60,3 +60,21 @@
     </section>
 </body>
 </html>
+
+<html> 
+    
+<head>
+<title>Hellbotica</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <section class="conteiner principal">
+        <h1>com o combo+, você pode aproveitar a Alura+ e o Alura Lingua por um preço único.</h1>
+    <img src="img/combo.png" alt="O combo+ é a junção da Alura+ e o Alura lingua">
+    </section>
+</body>
+
+</html>
