--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
             <a href="https://github.com/JoseAugustosantosleal"><img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="jose.jpg" alt="foto do Miguel">
+        <h3 class="estudante-nome">Miguel</h3>
+        <a href="">https://github.com/MiguelAugustoRiv<img class="estudante-icone" src="github.png" alt=></a>
+        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="jose.jpg" alt="foto da adrielli">
+        <h3 class="estudante-nome">José</h3>
+        <a href="https://github.com/Adrimoraesss"><img class="estudante-icone" src="github.png" alt=></a>
+        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="jose.jpg" alt="foto da Maria">
+        <h3 class="estudante-nome">José</h3>
+        <a href="https://github.com/mariaisamello"><img class="estudante-icone" src="github.png" alt=></a>
+        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+    </div>
+    </div>
+    </div>
        
     </div>
     </section>
