--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre nosso grupo</h2>
-            <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro.
-                .</p>
+            <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro tecnologico. 
+                Através das aulas de programação e robótica do novo ensino médio estamos realizando projetos que serão postados com a intenção de incentivar a nova geração.</p>
             <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino,etc.</p>
         </div>
         <img class="escola-imagem" src="Meu projeto.png" alt="Imagem para representar o robo da hellbotica">
@@ -31,51 +31,51 @@
         <h2 class="estudante-titulo">Criadores do Projeto HellBótica</h2>
         <div class="estudante-todos">
             <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="eduardo.jpg" alt="foto do eduardin">
-            <h3 class="estudante-nome">Eduardo</h3>
-            <a href="https://github.com/kakarotogoku"><img class="estudante-icone" src="github.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/eduardin0xx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="eduardo.jpg" alt="foto do eduardin">
+                <h3 class="estudante-nome">Eduardo</h3>
+                <a href="https://github.com/kakarotogoku"><img class="estudante-icone" src="github.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/eduardin0xx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="jhuan.jpg" alt="foto do Jhuan">
+                <h3 class="estudante-nome">Jhuan</h3>
+                <a href="https://github.com/Jhuan1"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+                <a href="https://www.instagram.com/jhuan_victor19/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="mikael.jpeg" alt="foto do Mikael">
+                <h3 class="estudante-nome">Mikael</h3>
+                <a href="https://github.com/ShaolinZy"><img class="estudante-icone" src="github.png" alt=></a>
+                <a href="https://www.instagram.com/mikael_eduardo19/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="jose.jpg" alt="foto do José">
+                <h3 class="estudante-nome">José</h3>
+                <a href="https://github.com/JoseAugustosantosleal"><img class="estudante-icone" src="github.png" alt=></a>
+                <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            </div>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jhuan.jpg" alt="foto do Jhuan">
-            <h3 class="estudante-nome">Jhuan</h3>
-            <a href="https://github.com/Jhuan1"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.instagram.com/jhuan_victor19/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="mikael.jpeg" alt="foto do Mikael">
-            <h3 class="estudante-nome">Mikael</h3>
-            <a href="https://github.com/ShaolinZy"><img class="estudante-icone" src="github.png" alt=></a>
-            <a href="https://www.instagram.com/mikael_eduardo19/?next=%2F"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="jose.jpg" alt="foto do José">
-            <h3 class="estudante-nome">José</h3>
-            <a href="https://github.com/JoseAugustosantosleal"><img class="estudante-icone" src="github.png" alt=></a>
+            <img class="estudante-imagem" src="jose.jpg" alt="foto do Miguel">
+            <h3 class="estudante-nome">Miguel</h3>
+            <a href="">https://github.com/MiguelAugustoRiv<img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="jose.jpg" alt="foto do Miguel">
-        <h3 class="estudante-nome">Miguel</h3>
-        <a href="">https://github.com/MiguelAugustoRiv<img class="estudante-icone" src="github.png" alt=></a>
-        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="jose.jpg" alt="foto da adrielli">
-        <h3 class="estudante-nome">José</h3>
-        <a href="https://github.com/Adrimoraesss"><img class="estudante-icone" src="github.png" alt=></a>
-        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="jose.jpg" alt="foto da Maria">
-        <h3 class="estudante-nome">José</h3>
-        <a href="https://github.com/mariaisamello"><img class="estudante-icone" src="github.png" alt=></a>
-        <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-    </div>
-    </div>
-    </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="jose.jpg" alt="foto da adrielli">
+            <h3 class="estudante-nome">José</h3>
+            <a href="https://github.com/Adrimoraesss"><img class="estudante-icone" src="github.png" alt=></a>
+            <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="jose.jpg" alt="foto da Maria">
+            <h3 class="estudante-nome">José</h3>
+            <a href="https://github.com/mariaisamello"><img class="estudante-icone" src="github.png" alt=></a>
+            <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+        </div>
+        </div>
+        </div>
        
     </div>
     </section>
