--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="eduardo.jpg" alt="foto do eduardin">
-                <h3 class="estudante-nome">Eduardo</h3>
-                <a href="https://github.com/kakarotogoku"><img class="estudante-icone" src="github.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/eduardin0xx/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-            </div>
-            <div class="estudante-div">
                 <img class="estudante-imagem" src="jhuan.jpg" alt="foto do Jhuan">
                 <h3 class="estudante-nome">Jhuan</h3>
                 <a href="https://github.com/Jhuan1"><img class="estudante-icone" src="github.png" alt="icone github"></a>
@@ -63,14 +57,14 @@
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jose.jpg" alt="foto da adrielli">
-            <h3 class="estudante-nome">José</h3>
+            <img class="estudante-imagem" src="adrielli.png" alt="foto da adrielli">
+            <h3 class="estudante-nome">adrielli</h3>
             <a href="https://github.com/Adrimoraesss"><img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jose.jpg" alt="foto da Maria">
-            <h3 class="estudante-nome">José</h3>
+            <img class="estudante-imagem"src="maria.jpg" alt="foto da Maria">
+            <h3 class="estudante-nome">Maria Isabelly</h3>
             <a href="https://github.com/mariaisamello"><img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
