--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="cabecalho-imagem" src="hellbotica2.gif" alt="hellbotica2">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Projetos</li>
         </ul>
     </header>
     <section class="escola">
