--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jose.jpg" alt="foto do Miguel">
+            <img class="estudante-imagem" src="Miguel.jpg" alt="foto do Miguel">
             <h3 class="estudante-nome">Miguel</h3>
-            <a href="">https://github.com/MiguelAugustoRiv<img class="estudante-icone" src="github.png" alt=></a>
+            <a href=""><img class="estudante-icone" src="github.png" alt=></a>
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
@@ -83,10 +83,4 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
-</head>
 
-<body>
-
-</body>
-
-</html>
