--- a/index.html
+++ b/index.html
@@ -83,4 +83,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+</head>
+<header class="cabecalho"
+<span class="cabeçalho_Hellbotica"></span>
+<img src="img/logo.svg" alt="Logo da Alurabooks">
+<a href="#"><img src="img/Favoritos.svg"</a>
+<a href="#"></a>
+</html>
 
