--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="hellbotica2.gif" alt="hellbotica2">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Projetos</li>
+            <li><a class="cabecalho-lista-item" href="escola.html">Escola</a></li>
+            <li><a class="cabecalho-lista-item" href="projetos.html">Projetos</a></li>
+            <li><a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a></li>
         </ul>
     </header>
     <section class="escola">
@@ -69,6 +70,10 @@
             <a href="https://www.instagram.com/joseaugustosantosleal09/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         </div>
+        </div>
+        <div class="button">
+            <button class="button"> Button
+            </button>
         </div>
        
     </div>
