--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
         </div>
         </div>
         <div class="button">
-            <button class="button"> Button
+            <a href="projetos.html"></a><button class="button"> Projetos HellBótica
+
             </button>
+
         </div>
        
     </div>
