--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         </div>
         <div class="button">
-            <a href="projetos.html"></a><button class="button"> Projetos HellBótica
+            <button class="button"><li><a href="projetos.html"> Projetos HellBótica</button></a></li>
 
             </button>
 
