--- a/estudantes.html
+++ b/estudantes.html
@@ -1,6 +1,47 @@
-<button>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span> Hellbotica
-  </button>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Estudantes do Grupo</title>
+  <link rel="stylesheet" type="text/css" href="estudantes style.css">
+</head>
+<body>
+  <h1>Estudantes do Grupo</h1>
+
+  <div class="student">
+    <img src="adrielli.png" alt="Estudante 1">
+    <div>Estudante 1</div>
+  </div>
+
+  <div class="student">
+    <img src="maria.jpg" alt="Estudante 2">
+    <div>Estudante 2</div>
+  </div>
+
+  <div class="student">
+    <img src="mikael.jpeg" alt="Estudante 3">
+    <div>Mikael</div>
+  </div>
+
+  <div class="student">
+    <img src="jhuan.jpg" alt="Estudante 4">
+    <div>Jhuan</div>
+  </div>
+
+  <div class="student">
+    <img src="jose.jpg" alt="Estudante 5">
+    <div>José</div>
+  </div>
+
+  <div class="student">
+    <img src="Miguel.jpg" alt="Estudante 1">
+    </div>
+    <div>Miguel</div>
+  </div>
+
+  <div class="buttons">
+    <a href="projetos.html">Projetos</a>
+    <a href="escola.html">Escola</a>
+
+  </div>
+</body>
+</html>
