--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre nosso grupo</h2>
+            <h2><button>
+                Sobre Nosso Grupo
+            </button></h2>
             <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro tecnologico. 
                 Através das aulas de programação e robótica do novo ensino médio estamos realizando projetos que serão postados com a intenção de incentivar a nova geração.</p>
             <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino,etc.</p>
