--- a/projetos.html
+++ b/projetos.html
@@ -15,18 +15,18 @@
   <div class="grid-container">
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 1">
-      <h2>Nome do Integrante 1</h2>
-      <p>Descrição do Integrante 1...</p>
+      <h2>Nome do Projeto 1</h2>
+      <p>Descrição do Projeto 1...</p>
     </div>
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 2">
-      <h2>Nome do Integrante 2</h2>
-      <p>Descrição do Integrante 2...</p>
+      <h2>Nome do Projeto 2</h2>
+      <p>Descrição do Projeto 2...</p>
     </div>
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 3">
-      <h2>Nome do Integrante 3</h2>
-      <p>Descrição do Integrante 3...</p>
+      <h2>Nome do Projeto 3</h2>
+      <p>Descrição do Projeto 3...</p>
     </div>
   </div>
 
