--- a/projetos.html
+++ b/projetos.html
@@ -15,8 +15,8 @@
   <div class="grid-container">
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 1">
-      <h2>Nome do Projeto 1</h2>
-      <p>Descrição do Projeto 1...</p>
+      <h2>Semáfaro simples</h2>
+      <p>Semáfaro de rua com uso de arduíno,leds e resistores...</p>
     </div>
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 2">
