--- a/projetos.html
+++ b/projetos.html
@@ -2,21 +2,18 @@
 <html>
 <head>
   <title>Página dos Projetos</title>
-  <link rel="stylesheet" href="projetos style.css"
-
+  <link rel="stylesheet" href="projetos style.css">
 </head>
 <body>
   <header>
     <h1>HellBótica Projetos</h1>
   </header>
 
-  <main>
-  </main>
   <div class="grid-container">
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 1">
       <h2>Semáfaro simples</h2>
-      <p>Semáfaro de rua com uso de arduíno,leds e resistores...</p>
+      <p>Semáfaro de rua com uso de arduíno, leds e resistores...</p>
     </div>
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 2">
@@ -28,8 +25,11 @@
       <h2>Nome do Projeto 3</h2>
       <p>Descrição do Projeto 3...</p>
     </div>
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider"></span>
+    </label>
   </div>
-
 
   <footer>
     <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
