--- a/escola.html
+++ b/escola.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hellbotica</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="hellbotica2.gif" alt="hellbotica2">
+        <ul class="cabecalho-lista">
+            <li><a class="cabecalho-lista-item" href="escola.html">Escola</a></li>
+            <li><a class="cabecalho-lista-item" href="projetos.html">Projetos</a></li>
+            <li><a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a></li>
+        </ul>
+
   <title>Escola - Localização</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
