--- a/escola.html
+++ b/escola.html
@@ -18,14 +18,27 @@
             <li><a class="cabecalho-lista-item" href="projetos.html">Projetos</a></li>
             <li><a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a></li>
         </ul>
+    </header>
 
-  <title>Escola - Localização</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Escola - Localização</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="map"></div>
+    <div id="map"></div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_API&callback=initMap" async defer></script>
-  <script src="script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_API&callback=initMap" async defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
+As correções feitas foram:
+
+Removi a tag <reconnect> duplicada e desnecessária.
+Fechei a tag <header> corretamente.
+Removi a segunda declaração do <!DOCTYPE html>.
+Corrigi a tag <title> duplicada, deixando apenas a correspondente à página de localização.
+Coloquei as tags <title> e <link> relacionadas à folha de estilo dentro da tag <head> correta.
+Fechei a tag <html> no final do documento corretamente.
+
+
+
+
