--- a/escola.html
+++ b/escola.html
@@ -19,6 +19,16 @@
             <li><a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a></li>
         </ul>
     </header>
+    <section class="escola">
+      <div class="escola-div-conteudo">
+          <h2><button>
+              Sobre NOSSA ESCOLA:
+          </button></h2>
+          <p class="escola-texto-um">
+            O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, 
+            Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.
+            
+
 
     <title>Escola - Localização</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -30,14 +40,6 @@
     <script src="script.js"></script>
 </body>
 </html>
-As correções feitas foram:
-
-Removi a tag <reconnect> duplicada e desnecessária.
-Fechei a tag <header> corretamente.
-Removi a segunda declaração do <!DOCTYPE html>.
-Corrigi a tag <title> duplicada, deixando apenas a correspondente à página de localização.
-Coloquei as tags <title> e <link> relacionadas à folha de estilo dentro da tag <head> correta.
-Fechei a tag <html> no final do documento corretamente.
 
 
 
