--- a/escola.html
+++ b/escola.html
@@ -20,14 +20,14 @@
         </ul>
     </header>
     <section class="escola">
-      <div class="escola-div-conteudo">
-          <h2><button>
-              Sobre NOSSA ESCOLA:
-          </button></h2>
-          <p class="escola-texto-um">
-            O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, 
-            Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.
-            
+        <div class="escola-div-conteudo">
+            <h2><button>
+                Sobre Nosso Grupo
+            </button></h2>
+            <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro tecnologico. 
+                Através das aulas de programação e robótica do novo ensino médio estamos realizando projetos que serão postados com a intenção de incentivar a nova geração.</p>
+            <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino,etc.</p>
+        </div>
 
 
     <title>Escola - Localização</title>
