--- a/estudantes.html
+++ b/estudantes.html
@@ -9,12 +9,12 @@
 
   <div class="student">
     <img src="adrielli.png" alt="Estudante 1">
-    <div>Estudante 1</div>
+    <div>Adrielli</div>
   </div>
 
   <div class="student">
     <img src="maria.jpg" alt="Estudante 2">
-    <div>Estudante 2</div>
+    <div>Maria Isabelly</div>
   </div>
 
   <div class="student">
@@ -33,7 +33,7 @@
   </div>
 
   <div class="student">
-    <img src="Miguel.jpg" alt="Estudante 1">
+    <img src="Miguel.png" alt="Estudante 1">
     </div>
     <div>Miguel</div>
   </div>
