--- a/escola.html
+++ b/escola.html
@@ -9,12 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <style>
-        #map {
-            height: 400px;
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
     <header class="cabecalho">
@@ -36,29 +30,8 @@
         <div id="map"></div>
     </section>
 
-    <script>
-        function redirectToGoogleMaps() {
-            window.location.href = "https://www.google.com/maps?q=Ibiporã";
-        }
-
-        function initMap() {
-            var ibipora = { lat: -23.265, lng: -51.048 };
-
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 13,
-                center: ibipora
-            });
-
-            var marker = new google.maps.Marker({
-                position: ibipora,
-                map: map,
-                title: 'Ibiporã'
-            });
-
-            marker.addListener('click', redirectToGoogleMaps);
-        }
-    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
