--- a/projetos.html
+++ b/projetos.html
@@ -16,9 +16,9 @@
       <p>Semáfaro de rua com uso de arduíno, leds e resistores...</p>
     </div>
     <div class="grid-item">
-      <img src="Semáfaro.jpg" alt="Foto do Integrante 2">
-      <h2>Nome do Projeto 2</h2>
-      <p>Descrição do Projeto 2...</p>
+      <img src="S botão.jpg" alt="Semáfaro botão">
+      <h2>Semáfaro com botão</h2>
+      <p>...</p>
     </div>
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 3">
