--- a/projetos.html
+++ b/projetos.html
@@ -21,9 +21,9 @@
       <p>...</p>
     </div>
     <div class="grid-item">
-      <img src="Semáfaro.jpg" alt="Foto do Integrante 3">
-      <h2>Nome do Projeto 3</h2>
-      <p>Descrição do Projeto 3...</p>
+      <img src="super maquina.jpg" alt="Super máquina">
+      <h2>Super Máquina</h2>
+      <p>....</p>
     </div>
     <label class="switch">
       <input type="checkbox">
