--- a/escola.html
+++ b/escola.html
@@ -45,6 +45,9 @@
             textoSobre.classList.toggle('show');
         }
     </script>
+    <footer>
+        <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
+      </footer>
 </body>
 </html>
 
