--- a/escola.html
+++ b/escola.html
@@ -31,17 +31,10 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </section>
-        <section class="História"> O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio
+ class="História"> O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio
              está localizado na Avenida Engenheiro Beltrão, 
             Nº 1005, zona leste da cidade de Ibiporã
              município do Estado do Paraná.
-Para a construção do colégio, a prefeitura desapropriou uma área de
- 19.480 M2 de propriedade do Senhor Antonio Zanoni.
- Na época, foram construídos três blocos.
-  O primeiro, com 10 salas e uma sala ambiente para biblioteca
-  o segundo destinado à ala administrativa, com banheiros para uso discente
-   e o terceiro com salas ambientes como: Oficina Industrial, Laboratório de Ciências, Educação para o Lar, Educação Artística.
-    Todos os blocos com proteção e cobertura. </section>
     </section>
 
     <script src="script.js"></script>
