--- a/escola.html
+++ b/escola.html
@@ -23,7 +23,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2><button class="btn-sobre" onclick="toggleSobre()">Sobre Nosso colegio</button></h2>
+            <h2><button class="btn-sobre" onclick="toggleSobre()">Sobre Nosso Colégio</button></h2>
             <p class="escola-texto-um" id="texto-sobre">O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.</p>
         </div>
         <section class="mapa">
@@ -31,10 +31,9 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.4203599159014!2d-51.04077242390008!3d-23.264170850742726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47ca7de7359d%3A0xd9c73ad5f8b13943!2sUnidade%20Polo%2C%20C%20E-Ef%20M%20P!5e0!3m2!1spt-BR!2sbr!4v1691578330344!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
- class="História"> O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio
-             está localizado na Avenida Engenheiro Beltrão, 
-            Nº 1005, zona leste da cidade de Ibiporã
-             município do Estado do Paraná.
+    </section>
+    <section class="História">
+        <p>O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.</p>
     </section>
 
     <script src="script.js"></script>
@@ -51,7 +50,6 @@
     </script>
     <footer>
         <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
-      </footer>
+    </footer>
 </body>
 </html>
-
