--- a/projetos.html
+++ b/projetos.html
@@ -28,6 +28,12 @@
     <label class="switch">
       <input type="checkbox">
       <span class="slider"></span>
+      <div class="grid-container">
+        <div class="grid-item">
+          <img src="S botão.jpg" alt="Foto do Integrante 1">
+          <h2>Led com Botão</h2>
+          <p>Led que acende com o botão.....</p>
+        </div>
     </label>
   </div>
 
