--- a/projetos.html
+++ b/projetos.html
@@ -30,7 +30,7 @@
       <span class="slider"></span>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="S botão.jpg" alt="Foto do Integrante 1">
+          <img src="Botão.jpg" alt="Foto Botao e led">
           <h2>Led com Botão</h2>
           <p>Led que acende com o botão.....</p>
         </div>
