--- a/projetos.html
+++ b/projetos.html
@@ -30,10 +30,16 @@
       <span class="slider"></span>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="Botão.jpg" alt="Foto Botao e led">
+          <img src="Botão.jpg" alt="Botao e Led">
           <h2>Led com Botão</h2>
           <p>Led que acende com o botão.....</p>
         </div>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="buzzer.png" alt="Buzzer">
+            <h2>Buzzer</h2>
+            <p>Buzzer que emite um som, com as notas musicais</p>
+          </div>
     </label>
   </div>
 
