--- a/estudantes.html
+++ b/estudantes.html
@@ -55,6 +55,51 @@
     <div>Miguel</div>
   </div>
 
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <title>Estudantes do Grupo</title>
+    <link rel="stylesheet" type="text/css" href="estudantes style.css">
+    <style>
+      /* Estilos CSS existentes aqui... */
+    </style>
+  </head>
+  <body>
+    <h1>Estudantes do Grupo</h1>
+    
+    <!-- Barra de navegação -->
+    <nav>
+      <ul>
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="escola.html">Escola</a></li>
+      </ul>
+    </nav>
+  
+    <!-- Resto do seu conteúdo HTML aqui... -->
+  
+    <script>
+      // JavaScript existente aqui...
+    </script>
+  </body>
+  </html>
+  <script>
+    const navigationLinks = document.querySelectorAll('nav a');
+  
+    navigationLinks.forEach(link => {
+      link.addEventListener('click', (event) => {
+        // Evite que o link direcione para a página
+        event.preventDefault();
+  
+        // Obtenha o valor do atributo "href" do link
+        const href = link.getAttribute('href');
+  
+        // Redirecione para a página correspondente
+        window.location.href = href;
+      });
+    });
+  </script>
+    
+
   <div class="buttons">
     <a href="projetos.html">Projetos</a>
     <a href="escola.html">Escola</a>
